--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
 
         <img class="thumb-head" src="Ilustrasithumb.jpeg">
-        <h1>Rekomendasi Software/Aplikasi Desain Terbaik 2024</h1>
+        <h1>5 Rekomendasi Software/Aplikasi Desain Terbaik 2024</h1>
         <p>Software/aplikasi ini juga menawarkan fitur mendalam, alat yang inovatif, dan tantangan yang seru untuk dihadapi. Jadi, siap untuk memulai petualangan desain Anda? Segera temukan rekomendasi kami dan siapkan diri untuk terjun ke dunia desain yang seru dan memikat! Jangan lewatkan kesempatan untuk merasakan inovasi dan keseruan yang ditawarkan oleh software/aplikasi ini. Jadi, tunggu apalagi? Segera temukan rekomendasi kami beserta link download di bawah ini!</p>
 
         <h2>Berikut ini rekomendasi software/aplikasi desain terbaik untuk tahun 2024 :</h2>
