--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@
             <p>Sketch adalah software desain UI/UX yang populer di kalangan desainer digital. Dengan antarmuka yang intuitif dan alat-alat yang canggih untuk desain mobile dan web, Sketch menjadi pilihan utama bagi desainer UI/UX.</p>
         </div>
 
-        <p>________________________________________________________________</p>
 
         <h3 id="link">Link :</h3>
         <table>
@@ -135,8 +134,6 @@
                 <td><a href="https://www.sketch.com/">Link</a></td>
             </tr>
         </table>
-
-        <p>______________________________________________________________________________</p>
         
         <p class="date">Diperbarui: 18 april 2024</p>
 
@@ -145,7 +142,7 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://rekomendasi-software-desain-2024.vercel.app/" target="_blank" rel="noopener noreferrer">
                 <img src="https://img.icons8.com/color/48/000000/facebook.png" alt="Facebook">
             </a>
-            <a href="https://twitter.com/intent/tweet?url=https://rekomendasi-software-desain-2024.vercel.app/&text=Butuh%20rekomendasi%20software%20desain%3F%20Baca%20disini😋" target="_blank" rel="noopener noreferrer">
+            <a href="https://twitter.com/intent/tweet?url=https://rekomendasi-software-desain-2024.vercel.app/&text=Butuh%20rekomendasi%20software%20desan%3F%20Baca%20disini😋" target="_blank" rel="noopener noreferrer">
                 <img src="https://img.icons8.com/color/48/000000/twitter.png" alt="Twitter">
             </a>
             <a href="https://www.linkedin.com/shareArticle?url=https://rekomendasi-software-desain-2024.vercel.app/&title=Butuh%20rekomendasi%20software%20desain%3F%20Baca%20disini😋" target="_blank" rel="noopener noreferrer">
